Updated CSS with professional design and color palette

--- a/index.html
+++ b/index.html
@@ -3,62 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TITLE</title>
+    <title>Azary House</title>
+    <link rel="stylesheet" href="./style/index.css">
 </head>
 <body>
     <header> 
-        <section id="logo">LOGO</section>
-        <section id="COMPANY NAME">COMPANY NAME</section>
-        <nav>
-            <ul type="non">
-                <li><a href="./Home.html">Home</a></li>
-                <li><a href="./Products.html">Products</a></li>
-                <li><a href="./Company">Company</a></li>
-                <li><a href="./More.html">More</a></li>
-            </ul>
-        </nav>
-        <input type="search" placeholder="Search">
-
+        <div class="header-container"> 
+           <div> 
+               <img src="./image/logo.png" alt="logo image" class="logo">
+               <div id="company-name">Azary House</div>
+           </div>
+           <div>  
+                <nav>
+                    <ul>
+                        <li><a href="./index.html">Home</a></li>
+                        <li><a href="./Products.html">Products</a></li>
+                        <li><a href="./Company.html">Company</a></li>
+                        <li><a href="./More.html">More</a></li>
+                    </ul>
+                </nav>
+                <input type="search" placeholder="Search">
+           </div> 
+        </div>
     </header>
     <main>
-        <h1>Headline</h1>
-        <section> 
-            <img src="image/rav4.png" alt="Image Toyota RAV4" height="300px" width=" 300 px">
-                <h2>Subhead 1</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.<br>
-                     Totam, beatae. Aliquam voluptatum necessitatibus sed iure, <br>
-                      vitae blanditiis asperiores, cupiditate vero non tenetur  <br>
-                      > magnam odit commodi fugiat tempora reiciendis dicta? Quo?</p>
-                <button>Button</button>
-        </section>
-        <section>
-            <img src="image/G-class.jpg" alt="Image Placeholder" height="300px" width=" 300 px">
-                <h2>Subhead 2</h2>
-                <button>Button</button>
-                <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. <br>
-                     Dolorem repellendus excepturi corporis est recusandae, magni.<br>
-                      Adipisci rem temporibus velit placeat esse, impedit odit. <br >  </p>
-        </section>
-
-        <section>
-            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit.<br>
-                 Hic qui totam optio molestias, eaque ab corrupti?  <br>
-                 Veritatis tempora praesentium obcaecati, repellat  <br>
-                 aliquid deleniti consequatur aspernatur accusamus  </p>
-        </section>
-        <section> 
-             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repudiandae facere facilis iste hic minus ullam nesciunt culpa, aliquid corrupti neque similique veritatis voluptas enim incidunt, asperiores vero totam natus corporis.</p> 
-        </section>
-
-
-
+        <h1>Azary House</h1>
+        <div class="content-container">
+            <section>
+                <img src="./image/jo.png" alt="Flag-Azerbaijan image" class="content-image">
+                <h2>Jordan branch</h2>
+                <p>We are a small company with a big vision to showcase Azerbaijani culture and traditions in a fresh way and compact size. Become a part of our story.</p>
+                <button>select</button>
+            </section>
+            <section>
+                <img src="./image/uae.png" alt="Image Placeholder" class="content-image">
+                <h2>UAE branch</h2>
+                <p>Azary House is engaged in wholesale and retail of various products made in Azerbaijan across Jordan and UAE. Our product line consists of exclusive and unique products that meet every Customer's expectations.</p>
+                <button>select</button>
+            </section>
+        </div>
+        <p class="products">
+            | Beverages | Energy Drinks | Juices & Nectars | Tea | Chilled & Fresh Food | Fresh Fruit & Vegetables | Condiments & Sauces | Dry Goods | Canned Products | Grains / Cereals / Flours | Coffee Beans | Rice | Meat & Poultry | Processed Meat | Snacks | Dried Fruit & Vegetables | Spreads, Honey & Jams
+        </p>
     </main>
     <footer>
-        <a href="./Home.html">Home</a>
+        <a href="./index.html">Home</a>
         <a href="./Products.html">Products</a>
         <a href="./Company.html">Company</a>
         <a href="./More.html">More</a>
-
     </footer>
 </body>
 </html>
