--- a/index.html
+++ b/index.html
@@ -28,18 +28,25 @@
     </header>
     <main>
         <h1>Azary House</h1>
+        <h5> Azary House is engaged in wholesale and retail of various products made in Azerbaijan across Jordan and UAE. Our product line consists of exclusive and unique products that meet every Customer's expectations.</h5>
         <div class="content-container">
             <section>
                 <img src="./image/jo.png" alt="Flag-Azerbaijan image" class="content-image">
                 <h2>Jordan branch</h2>
-                <p>We are a small company with a big vision to showcase Azerbaijani culture and traditions in a fresh way and compact size. Become a part of our story.</p>
-                <button>select</button>
+                <p> <h3> Address </h3> 
+                    City Mall, Amman <br>
+                    Jordan <br>
+                    Floorplan Location</p>
+                <button>Floorplan Location</button>
             </section>
             <section>
                 <img src="./image/uae.png" alt="Image Placeholder" class="content-image">
                 <h2>UAE branch</h2>
-                <p>Azary House is engaged in wholesale and retail of various products made in Azerbaijan across Jordan and UAE. Our product line consists of exclusive and unique products that meet every Customer's expectations.</p>
-                <button>select</button>
+                <p> <h3> Address </h3> 
+                    Marina Mall, Abu Dhabi <br>
+                    United Arab Emirates <br>
+                    Floorplan Location</p>
+                <button>Floorplan Location</button>
             </section>
         </div>
         <p class="products">
