--- a/index.html
+++ b/index.html
@@ -28,29 +28,28 @@
     </header>
     <main>
         <h1>Azary House</h1>
-        <h5> Azary House is engaged in wholesale and retail of various products made in Azerbaijan across Jordan and UAE. Our product line consists of exclusive and unique products that meet every Customer's expectations.</h5>
+        <h5> Azary House is engaged in wholesale and retail of various products made in Azerbaijan across Jordan and UAE.</h5>
+        <!-- <h5> Our product line consists of exclusive and unique products that meet every Customer's expectations.</h5> -->
         <div class="content-container">
             <section>
-                <img src="./image/jo.png" alt="Flag-Azerbaijan image" class="content-image">
+                <img src="./image/jo.png" alt="Flag jo" class="content-image">
                 <h2>Jordan branch</h2>
                 <p> <h3> Address </h3> 
                     City Mall, Amman <br>
-                    Jordan <br>
-                    Floorplan Location</p>
-                <button>Floorplan Location</button>
-            </section>
+                    Jordan </p>
+                    <a href="https://maps.app.goo.gl/2djS179KGPwpfRaV7" target="_blank"><button>Floorplan Location</button></a>
+                </section>
             <section>
-                <img src="./image/uae.png" alt="Image Placeholder" class="content-image">
+                <img src="./image/uae.png" alt="flag UAE" class="content-image">
                 <h2>UAE branch</h2>
                 <p> <h3> Address </h3> 
                     Marina Mall, Abu Dhabi <br>
-                    United Arab Emirates <br>
-                    Floorplan Location</p>
-                <button>Floorplan Location</button>
+                    United Arab Emirate </p>
+                <a href="https://maps.app.goo.gl/zvWRnK28T1CBnfZQ8" target="_blank"><button>Floorplan Location</button></a>
             </section>
         </div>
         <p class="products">
-            | Beverages | Energy Drinks | Juices & Nectars | Tea | Chilled & Fresh Food | Fresh Fruit & Vegetables | Condiments & Sauces | Dry Goods | Canned Products | Grains / Cereals / Flours | Coffee Beans | Rice | Meat & Poultry | Processed Meat | Snacks | Dried Fruit & Vegetables | Spreads, Honey & Jams
+            | Beverages | Energy Drinks | Juices & Nectars | Tea | Chilled & Fresh Food | Fresh Fruit & Vegetables | Condiments & Sauces | Dry Goods | Canned Products | Grains / Cereals / Flours | Coffee Beans | Rice | Meat & Poultry | Processed Meat | Snacks | Dried Fruit & Vegetables | Spreads, Honey & Jams |
         </p>
     </main>
     <footer>
