add contact us using bootstrap

--- a/Products.html
+++ b/Products.html
@@ -77,6 +77,7 @@
             <li><a href="./Products.html">Products</a></li>
             <li><a href="./Company.html">Company</a></li>
             <li><a href="./More.html">More</a></li>
+            <a href="./ContactUs.html">Contact Us</a>
         </ul>
     </footer>
 </body>
