--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                         <li><a href="./Products.html">Products</a></li>
                         <li><a href="./Company.html">Company</a></li>
                         <li><a href="./More.html">More</a></li>
+                       <li><a href="./ContactUs.html">Contact Us</a></li> 
                     </ul>
                 </nav>
                 <input type="search" placeholder="Search">
@@ -28,23 +29,18 @@
     </header>
     <main>
         <h1>Azary House</h1>
-        <h5> Azary House is engaged in wholesale and retail of various products made in Azerbaijan across Jordan and UAE.</h5>
         <!-- <h5> Our product line consists of exclusive and unique products that meet every Customer's expectations.</h5> -->
         <div class="content-container">
             <section>
                 <img src="./image/jo.png" alt="Flag jo" class="content-image">
                 <h2>Jordan branch</h2>
-                <p> <h3> Address </h3> 
-                    City Mall, Amman <br>
-                    Jordan </p>
+                <p> Azary House is engaged in wholesale and retail of various products made in Azerbaijan across Jordan<h3> Address </h3>  </p>
                     <a href="https://maps.app.goo.gl/2djS179KGPwpfRaV7" target="_blank"><button>Floorplan Location</button></a>
                 </section>
             <section>
                 <img src="./image/uae.png" alt="flag UAE" class="content-image">
                 <h2>UAE branch</h2>
-                <p> <h3> Address </h3> 
-                    Marina Mall, Abu Dhabi <br>
-                    United Arab Emirate </p>
+                <p>Azary House is engaged in wholesale and retail of various products made in Azerbaijan across UAE. <h3> Address </h3>  </p>
                 <a href="https://maps.app.goo.gl/zvWRnK28T1CBnfZQ8" target="_blank"><button>Floorplan Location</button></a>
             </section>
         </div>
@@ -57,6 +53,7 @@
         <a href="./Products.html">Products</a>
         <a href="./Company.html">Company</a>
         <a href="./More.html">More</a>
+        <a href="./ContactUs.html">Contact Us</a>
     </footer>
 </body>
 </html>
