--- a/Products.html
+++ b/Products.html
@@ -39,7 +39,7 @@
                     <th>Action</th>
                 </tr>
             </thead>
-            <tbody>
+            <tbody class="tbody">
                 <tr>
                     <td>Beverages</td>
                     <td>Douches</td>
@@ -65,7 +65,7 @@
             <input type="text" id="product-name" name="product-name" required><br><br>
 
             <label for="product-price">Price ($):</label><br>
-            <input type="number" id="product-price" name="product-price" step="0.01" required><br><br>
+            <input type="number" id="product-price" name="product-price"  required><br><br>
 
             <button type="submit">Add Product</button>
         </form>
@@ -80,5 +80,6 @@
             <a href="./ContactUs.html">Contact Us</a>
         </ul>
     </footer>
+    <script src="./script.js"></script>
 </body>
 </html>
