--- a/Products.html
+++ b/Products.html
@@ -29,7 +29,7 @@
     <main>
         <h1>Products</h1>
 
-        <table class="products-table">
+        <table id="products-table">
             <caption>Products List</caption>
             <thead>
                 <tr>
@@ -58,16 +58,16 @@
         <h2>Add New Product</h2>
         <form id="add-product-form">
             
-            <label for="product-category">Category:</label><br>
-            <input type="text" id="product-category" name="product-category" required><br><br>
+            <label for="productCategory">Category:</label><br>
+            <input type="text" id="productCategory" name="productCategory" required><br><br>
 
-            <label for="product-name">Product Name:</label><br>
-            <input type="text" id="product-name" name="product-name" required><br><br>
+            <label for="productName">Product Name:</label><br>
+            <input type="text" id="productName" name="productName" required><br><br>
 
-            <label for="product-price">Price ($):</label><br>
-            <input type="number" id="product-price" name="product-price"  required><br><br>
+            <label for="productPrice">Price ($):</label><br>
+            <input type="number" id="productPrice" name="product-price"  required><br><br>
 
-            <button type="submit">Add Product</button>
+            <input type="submit" value="Add">
         </form>
     </main>
 
